Add the options to prevent warnings in stdout.log when used with Java 11